@@ -2,7 +2,6 @@
 <head>
  <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL" />
  <title>Standard C++ Library v3</title>
- <link rel="StyleSheet" href="lib3styles.css" />
 </head>
 
 <body>
