@@ -1,6 +1,0 @@
-.centered { text-align: center }
-.tocheader { font-size: large }
-.fineprint { font-size: x-small }
-.larger { font-size: large }
-
-PRE { text-align: left ; margin-left: 1em }
