@@ -1,3 +1,8 @@
+2014-06-29  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* lib3styles.css: Remove.
+	* index.html: Remove reference to lib3styles.css.
+
 2009-06-01  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	* index.html:  Renew link for the Holy Grail scene.
